# project2

./: Makefile  Makefile.in  config.status  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
src/: Makefile  Makefile.am  Makefile.in
src/.deps/: cma.Po  ma.Po
